@@ -3082,7 +3082,7 @@ When used with {-lu':v}, this prefix means "Someone (indefinite subject) does so
       <column name="antonyms"></column>
       <column name="see_also">{cha'DIch:n:2}, {boQ:n:2}</column>
       <column name="notes">This refers to a person who assists someone.</column>
-      <column name="hidden_notes">Marc Okrand is billed as Associate Producer, translated as {chenmoHwI' boQ:n:nolink}, in the film {Conlanging:src}.</column>
+      <column name="hidden_notes">Marc Okrand ({marq 'oqranD:n:name}) is billed as Associate Producer, translated as {chenmoHwI' boQ@@chenmoHwI':n, boQ:n:1}, in the film {Conlanging:src}.</column>
       <column name="components"></column>
       <column name="examples"></column>
       <column name="search_tags">assistant</column>
